common-applications/test-environment/mirror-manage/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: mirror-manage
  name: mirror-manage
