common-applications/test-environment/mirror-manage/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: mirror-manage-ingress
  namespace: mirror-manage
spec:
  tls:
    - hosts:
      - mirror-manager.test.osinfra.cn
      secretName: mirror-manage-tls
  rules:
    - host: mirror-manager.test.osinfra.cn
      http:
        paths:
        - backend:
            serviceName: mirror-manage-service
            servicePort: 80
          path: /
